DEFININDO NOMES VARIAVEIS CORES

--- a/cores.html
+++ b/cores.html
@@ -71,6 +71,19 @@ body {
   width:70px; height:70px; text-align: center; align-items: center;
 }
 
+/* VARIAVEIS DISPONIVEIS ::
+
+color1 
+color2 
+color3 
+
+lUMINOSIDADE ::
+darken 
+light
+normal
+
+ */
+
 
 </style>
 
