Implementando Slideshow Home

--- a/layout__1/layout_1.html
+++ b/layout__1/layout_1.html
@@ -6,6 +6,7 @@
     <title>Estyles</title>
 
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./slideshow--home.css">
 </head>
 
 <style>
@@ -127,7 +128,25 @@ nav ul  {
 
     <main class="main__home">
         <div class="container">
-            <div class="cor1 ">1</div>
+            <div class="cor1 ">
+
+                <!-- SLIDESHOW--HOME -->
+                <div id="items-wrapper">
+                    <h1>Fotográfias</h1>
+                    <div id="items">
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=950"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=930"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=990"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=980"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=970"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=976"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=993"/></div>
+                        <div class="item"><img src="https://unsplash.it/1600/400?image=969"/></div>
+                    </div>
+                </div>
+                <!-- FIM SLIDESHOWHOME -->               
+                
+                </div>
             <div class="cor2 ">2</div>        
         </div>
     </main>
@@ -172,6 +191,8 @@ nav ul  {
           Footer
         </footer>
       </div> -->
+
+      <script src="./slideshow--home.js"></script>
     
 </body>
 </html>
